Add section on the clans of skellige

--- a/Witcher Plugin.tex
+++ b/Witcher Plugin.tex
@@ -132,7 +132,9 @@ keeping the spirit of simplicity and learnability of the underlying system. Yet 
 endeavours also to serve as a reference for players who have never heard of this setting before, not to give detailed descriptions of the world,
 but to provide names and points of reference that can be used to look up detailed information whereever desired.
 \\\\
-Since the my only direct exposure to The Witcher has hitherto been the series of games, these to a large degree shape the gameplay elements.
+Since my only direct exposure to The Witcher has hitherto been the series of games and the Netflix show
+\footnote{I would therefore particularily welcome feedback from readers of the books on the accuracy of the information I present in the descriptive
+	sections}, these to a large degree shape the gameplay elements.
 For the same reason, the time all descriptions are appropriate to is roughly between the first two games, though of course, the same rules (and
 most of the descriptions) can be used to play during any time a couple decades sooner or later.
 \\\\
@@ -198,6 +200,72 @@ This section \textit{is} concerned with politics, as well as social structures a
 \printrealm{temeria}
 
 \printrealm{toussaint}
+
+\section{Peoples and groups}
+This section will list and describe some of the associations that, while not nations, are perhaps interesting to know about.
+
+\subsection{The clans of \hyperref[region:skellige]{Skellige}}\label{people:skellige}
+The inhabitants of the \nameref{region:skellige} are shaped in large part by the isles they inhabit: They are rough, blunt,
+and thick-headed, but fierce not only in enmity, but in friendship also. They trust their own strength and boast of their
+daring deeds, whether they be successful battle or a long and difficult voyage. Since they live in an archipelago, their culture
+is tied closely to seafaring, and they build the dreaded drakkars, longships, which they use in raids against the continent.
+These raids are necessary to their economy, since the islands are small and rocky, with little farmland available, but they are
+also a kind of sport: While the people on the continent might condemn theft and robbery, you might say a ship-load of \hyperref[people:skellige]{Skalds}
+falling upon a small town is a fair contest, and the winner gets to choose their price.
+\\[1ex]
+Despite centuries of armed conflict, the islanders and the mainlanders don't exactly hate each other, and there is trade with
+such goods and services as the one can provide the others - \hyperref[region:skellige]{Skelliger} mercenaries are highly valued,
+for example, not only for their skill at arms, but also their honesty and loyalty\footnote{Wich is prone to running out once the coin does}.
+\\[1ex]
+The women of \hyperref[region:skellige]{Skellige} are trained in warfare alongside the men, likely owing to the men's frequent and prolonged
+absences from their homes, and are by law equal in all aspects of life. Nonetheless, it is rare for women to hold a position of authority
+in one of the clans.
+\\[2ex]
+The clans themselves are subdivided into bonds and ruled by one chieftain, the Jarl. In war, all clans are led by one central figure,
+elected for life by the jarls: The King of Skellige. His role is purely a military one, though of course a good deal of honour and prestige
+come with it, and most of the actual commanding is done by the Jarl of Skellige, the admiral of the islanders' fleet. There are seven clans
+inhabiting the chief isles of the archipelago:
+
+\subsubsection{Clan Brokvar}
+The descendants of Sove inhabit the north-east of the isle of Spikeroog. Ever since one of their Jarls refused to give battle when outnumbered, they have
+been considered cowards by the clans Tuirseach and an Craite, though all admit the archers of Clan Brokvar have no equal on the isles.
+
+\subsubsection{Clan an Craite}
+Clan an Craite's seat of power is the citadel of Kaer Trolde, said to have been carved from the rock single-handedly by the clan's founder Grymmdjarr,
+from where it's jarls rule the northern half of Ard Skellig. They are the closest ally of Clan Tuirseach.
+
+\subsubsection{Clan Dimun}
+Though Clan Dimun claims descent from Broddr, a virtuous hero, their reputation even on the \hyperref[region:skellige]{isles} is one of cheats, thieves
+and marauders, and their raids are considered brutal even by \hyperref[region:skellige]{Skellige}-standards. Their Jarls rule the isle of Faroe from Harviken.
+
+\subsubsection{Clan Drummond}
+The Clan's original territory was Undvik, but they are now settled in the southern half of Ard Skellig. They claim that Clan an Craite seized the northern half
+from them and therefore consider them rivals rather than neighbours. Despite this dispute, it is Clan Heymaey who suffers the most under Clan Drummond, whose
+jarls have made a habit of pillaging Hindarsfjall. The Jarls rule from Holmstein and Kaer Muire and consider Modolf their founding father.
+
+\subsection{Clan Heymaey}
+The isle of Hindarsfjall is ruled by Clan Heymaey, whose progenitor is seid to be Otkell. The clan stands out from the others by it's piety: The temple of Freya
+and the holy grave of Hindar are both located on their island. Aside from traditional skirmishes with raiders of Clan Drummond, Clan Heymaey gets along
+very well with the other clans.
+
+\subsection{Clan Tordarroch}
+The ancestral home of Clan Tordarroch is on Undvik, but they have recently removed from the island to live in their ships: an ice giant has driven them from
+the isle and made it uninhabitable, they claim. Over time, their ships were bridged with more and more planks, until eventually, they were all a single structure:
+The Floating Market.
+
+\subsection{Clan Tuirseach}
+The descendants of Tyr rule An Skellig, the island best-suited for farming, since it has a wide and enclosed plain where crops are relatively sheltered from the
+sea. This clan has brought fourth more kings than any of the others, and they are greatly strengthened by their alliance with Clan an Craite.
+
+\subsection{The Order of the Flaming Rose}
+
+\section{Customs}
+
+\subsection{The Law of Surprise}
+In the north, it is the custom that if one man by chance comes upon another in distress and saves his life, they should not go unrewarded, but neither
+should the saviour be greedy in choosing his boon. Instead, the Law of Surprise is invoked: ``Give me that which you find at home but did not expect.''
+This may be as little as a dead dog who was still alive when the owner left, but in some tragic cases, men have returned home to find their wives pregnant.
+The Law is held sacred, and people are loth to break it.
 
 \chapter{Character creation}
 In this chapter, the impact of the characters race on stats and gameplay will be described. A short and intentionally vague paragraph on starting
