--- a/Witcher Plugin.tex
+++ b/Witcher Plugin.tex
@@ -182,6 +182,8 @@ No traveller in the north should forgo the sight of the sun sinking into the sea
 Called by men the ``Forest of Death,'' the home of the Dryads stretches across the north's largest wood. It offers a refuge to
 all those pursued and discriminated against by men and stands as the last realm never conquered by the younger race.
 
+\subsection{Velen}\label{region:velen}
+
 \newpage
 
 \section{Nations and states}
@@ -605,7 +607,12 @@ These are the various monsters of human shape prowling the world.
 \section{Necrophages}
 Here are listed the manifold corpse-eaters plagueing the war-torn areas of the North. Whereever there
 are corpses unburied, one can be sure to come across a handful of these truly unsanitory creatures.
+\\[1.5ex]
+The levels of severity of injuries against necrophages dealt by non-silver weapons are halved.
 
+\printmonster{drowned_dead}
+\printmonster{drowner}
+\printmonster{mucknixer}
 \printmonster{rotfiend}
 
 \section{Spectres}\label{monster:spectre}
