--- a/Witcher Plugin.tex
+++ b/Witcher Plugin.tex
@@ -172,7 +172,7 @@ These mountains form the border between \nameref{realm:aedirn} and \nameref{real
 of ore found there. It is hardly surprising that the mountains, homeland of dwarves and gnomes, have produced some of the finest
 pieces of smithcraft to be found at this age in the world. The regions largest settlement is situated beneath Mount Carbon,
 where its inhabitants mine incessantly for the worlds best iron and gnomes in their smithies forge excellent weapons, such as
-the renowned Gwyhir.
+the renowned \hyperref[weapon:gwyhir]{Gwyhir}.
 
 \subsection{The Skellige-Isles}\label{region:skellige}
 A collection of six islands to the continent's west. Their rough cliffs and grey sea have an untamed, perilous beauty.
@@ -183,6 +183,10 @@ Called by men the ``Forest of Death,'' the home of the Dryads stretches across t
 all those pursued and discriminated against by men and stands as the last realm never conquered by the younger race.
 
 \subsection{Velen}\label{region:velen}
+A miserable province of \nameref{realm:temeria}, to the north of \nameref{city:gors_velen}. The people of this
+province are poor and most of it is covered by extensive swamps and dark woods. Travellers are likely to be met
+with distrust, if ever they reach a village and do not fall victim to \hyperref[monster:drowner]{drowners} or 
+brigands.
 
 \newpage
 
@@ -508,7 +512,7 @@ The system assumes the use of the harcore combat rules, though it may be adapted
 These are some particular weapons which, technically, fall into one of the categories of the Cogent rule book,
 but receive superior stats to reflect their renown within the world.
 
-\weapon[weapon:gwyhir]{Gwyhir}{Forged by cunning gnomes in the deep smithies of Mount Carbon, These swords
+\weapon[weapon:gwyhir]{Gwyhir}{Forged by cunning gnomes in the deep smithies of Mount Carbon, these swords
 	are widely considered the best to be bought for money.}{3}{3}
 
 \chapter{Detailed currencies}
@@ -625,7 +629,7 @@ These are the various monsters of human shape prowling the world.
 
 \printmonster{harpy}
 
-\section{Necrophages}
+\section{Necrophages}\label{monster:necrophage}
 Here are listed the manifold corpse-eaters plagueing the war-torn areas of the North. Whereever there
 are corpses unburied, one can be sure to come across a handful of these truly unsanitory creatures.
 \\[1.5ex]
@@ -635,6 +639,10 @@ The levels of severity of injuries against necrophages dealt by non-silver weapo
 \printmonster{drowner}
 \printmonster{mucknixer}
 \printmonster{rotfiend}
+
+\section{Relicts}
+
+\printmonster{fiend}
 
 \section{Spectres}\label{monster:spectre}
 This section contains all those incorporeal beings whose origins can be found in the deceased. They cannot be
