--- a/monsters.tex
+++ b/monsters.tex
@@ -119,3 +119,22 @@
 }{
     0-1 STR, 0-1 REF, -1 INT, 0-1 Strangle (proficiency)
 }
+
+\definemonster{fiend}{Fiend}
+{
+    If one wishes to picture a fiend, one should think of a nasty deer the size, strength and temper of a bear. A 
+    large one. They are sheer mountains of muscle with thick fur on their backs, stripes in the more deer-like fur 
+    on their flanks and antlers the size of a chandelier in the royal palace of \hyperref[city:vizima]{Vizima}.
+    Happily, they do not hunt humans and even avoid them where possible, but if by ill fortune one takes up it's 
+    lair by a previously safe road, even a knight with his entourage are likely to end up as canned food for 
+    \hyperref[monster:necrophage]{necrophages}. Not only are fiends physically overpowering, they also heal at an
+    astonishing rate \textendash and then there is their hypnotic third eye, just in case you thought you might 
+    live through an encounter with this moose on steroids.
+
+    Fiends usually inhabit forests and swamps.
+}{
+    5-7 STR, 1-2 REF, 0-1 INT, 1-2 Trample (proficiency)
+}
+
+\linkability{fiend}{glare}
+\linkability{fiend}{restoration:fiend}
