Move around some stuff

--- a/Witcher Plugin.tex
+++ b/Witcher Plugin.tex
@@ -70,7 +70,28 @@ footheight=38pt]{scrreport}
 \setcounter{tocdepth}{1}
 \tableofcontents
 
-\iffalse % German texts
+\chapter*{Introduction}
+This document is meant to aid in organizing tabletop roleplaying sessions set in the world of The Witcher using the system Cogent Roleplay.
+It is by no means exhaustive, and does not attempt to be: Anyone seeking to narrate a campaign in so complex a world had best have some first-
+hand experience of it, and both the original books and the games will convey more details on any given topic than this plugin. It is concerned
+mostly with creating rules that (more or less) faithfully convey the experience of the original works in this roleplaying system, as well as
+keeping the spirit of simplicity and learnability of the underlying system. Yet it
+endeavours also to serve as a reference for players who have never heard of this setting before, not to give detailed descriptions of the world,
+but to provide names and points of reference that can be used to look up detailed information whereever desired.
+\\\\
+Since my only direct exposure to The Witcher has hitherto been the series of games and the Netflix show
+\footnote{I would therefore particularily welcome feedback from readers of the books on the accuracy of the information I present in the descriptive
+	sections}, these to a large degree shape the gameplay elements.
+For the same reason, the time all descriptions are appropriate to is roughly between the first two games, though of course, the same rules (and
+most of the descriptions) can be used to play during any time a couple decades sooner or later.
+\\\\
+The document contains very few images, as I do not hold the right to any. I believe the Bestiary in particular would benefit greatly
+from depictions of the various creatures, but 1) It would be a lot of effort to find fitting portraits and 2) It would be even more effort to
+ensure I do not encroach on copyright of any sort. Happily, images can be easily found by looking up the creatures' names online.
+\\\\
+This version of the plugin is by no means complete, more content is to be added (hopefully soon).
+
+\iffalse
 	\chapter{Die Welt}
 
 	\section{Geographie}
@@ -122,27 +143,6 @@ footheight=38pt]{scrreport}
 	\subparagraph{Ban Ard}
 	Die wahrscheinlich wichtigste Stadt Kaedwens. Hier befindet sich die berühmte Magierakademie.
 \fi
-
-\chapter*{Introduction}
-This document is meant to aid in organizing tabletop roleplaying sessions set in the world of The Witcher using the system Cogent Roleplay.
-It is by no means exhaustive, and does not attempt to be: Anyone seeking to narrate a campaign in so complex a world had best have some first-
-hand experience of it, and both the original books and the games will convey more details on any given topic than this plugin. It is concerned
-mostly with creating rules that (more or less) faithfully convey the experience of the original works in this roleplaying system, as well as
-keeping the spirit of simplicity and learnability of the underlying system. Yet it
-endeavours also to serve as a reference for players who have never heard of this setting before, not to give detailed descriptions of the world,
-but to provide names and points of reference that can be used to look up detailed information whereever desired.
-\\\\
-Since my only direct exposure to The Witcher has hitherto been the series of games and the Netflix show
-\footnote{I would therefore particularily welcome feedback from readers of the books on the accuracy of the information I present in the descriptive
-	sections}, these to a large degree shape the gameplay elements.
-For the same reason, the time all descriptions are appropriate to is roughly between the first two games, though of course, the same rules (and
-most of the descriptions) can be used to play during any time a couple decades sooner or later.
-\\\\
-The document contains very few images, as I do not hold the right to any. I believe the Bestiary in particular would benefit greatly
-from depictions of the various creatures, but 1) It would be a lot of effort to find fitting portraits and 2) It would be even more effort to
-ensure I do not encroach on copyright of any sort. Happily, images can be easily found by looking up the creatures' names online.
-\\\\
-This version of the plugin is by no means complete, more content is to be added (hopefully soon).
 
 \chapter{The world}
 
